--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,13 +1,13 @@
 @article{Marchand2016,
     author = {Marchand, Virginie and Blanloeil-Oillo, Florence and Helm, Mark and Motorin, Yuri},
-    title = "{Illumina-based RiboMethSeq approach for mapping of 2′-O-Me residues in RNA}",
+    title = "{Illumina-based RiboMethSeq approach for mapping of 2'-O-Me residues in RNA}",
     journal = {Nucleic Acids Research},
     volume = {44},
     number = {16},
     pages = {e135-e135},
     year = {2016},
     month = {06},
-    abstract = "{RNA 2′-O-methylation is one of the ubiquitous nucleotide modifications found in many RNA types from Bacteria, Archaea and Eukarya. RNAs bearing 2′-O-methylations show increased resistance to degradation and enhanced stability in helices. While the exact role of each 2′-O-Me residue remained elusive, the catalytic protein Fibrillarin (Nop1 in yeast) responsible for 2′-O-methylation in eukaryotes, is associated with human pathologies. Therefore, there is an urgent need to precisely map and quantify hundreds of 2′-O-Me residues in RNA using high-throughput technologies. Here, we develop a reliable protocol using alkaline fragmentation of total RNA coupled to a commonly used ligation approach, and Illumina sequencing. We describe a methodology to detect 2′-O-methylations with high sensitivity and reproducibility even with limited amount of starting material (1 ng of total RNA). The method provides a quantification of the 2′-O-methylation occupancy of a given site, allowing to detect relatively small changes (\\&gt;10\\%) in 2′-O-methylation profiles. Altogether this technique unlocks a technological barrier since it will be applicable for routine parallel treatment of biological and clinical samples to decipher the functions of 2′-O-methylations in pathologies.}",
+    abstract = "{RNA 2'-O-methylation is one of the ubiquitous nucleotide modifications found in many RNA types from Bacteria, Archaea and Eukarya. RNAs bearing 2'-O-methylations show increased resistance to degradation and enhanced stability in helices. While the exact role of each 2'-O-Me residue remained elusive, the catalytic protein Fibrillarin (Nop1 in yeast) responsible for 2'-O-methylation in eukaryotes, is associated with human pathologies. Therefore, there is an urgent need to precisely map and quantify hundreds of 2'-O-Me residues in RNA using high-throughput technologies. Here, we develop a reliable protocol using alkaline fragmentation of total RNA coupled to a commonly used ligation approach, and Illumina sequencing. We describe a methodology to detect 2'-O-methylations with high sensitivity and reproducibility even with limited amount of starting material (1 ng of total RNA). The method provides a quantification of the 2'-O-methylation occupancy of a given site, allowing to detect relatively small changes (\\&gt;10\\%) in 2'-O-methylation profiles. Altogether this technique unlocks a technological barrier since it will be applicable for routine parallel treatment of biological and clinical samples to decipher the functions of 2'-O-methylations in pathologies.}",
     issn = {0305-1048},
     doi = {10.1093/nar/gkw547},
     url = {https://doi.org/10.1093/nar/gkw547},
@@ -29,7 +29,7 @@ eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1707674114}
 
 @article{Marcel2021,
     author = {Marcel, Virginie and Kielbassa, Janice and Marchand, Virginie and Natchiar, Kundhavai S and Paraqindes, Hermes and Van Long, Flora Nguyen and Ayadi, Lilia and Bourguignon-Igel, Valérie and Monaco, Piero Lo and Monchiet, Déborah and Scott, Véronique and Tonon, Laurie and Bray, Susan E and Diot, Alexandra and Jordan, Lee B and Thompson, Alastair M and Bourdon, Jean-Christophe and Dubois, Thierry and André, Fabrice and Catez, Frédéric and Puisieux, Alain and Motorin, Yuri and Klaholz, Bruno P and Viari, Alain and Diaz, Jean-Jacques},
-    title = "{Ribosomal RNA 2′ O-methylation as a novel layer of inter-tumour heterogeneity in breast cancer}",
+    title = "{Ribosomal RNA 2' O-methylation as a novel layer of inter-tumour heterogeneity in breast cancer}",
     journal = {NAR Cancer},
     volume = {3},
     number = {1},
